--- a/spring-cloud-e-zuul/src/main/resources/bootstrap.yml
+++ b/spring-cloud-e-zuul/src/main/resources/bootstrap.yml
@@ -32,7 +32,6 @@ zuul:
 #  sensitive-headers:
 
 #  默认情况下，如果ribbon的连接超时和处理超时小于hystrix的超时时间，那么zuul会自动发起重试
-#  zuul重试默认好像是一个服务一次（待验证）
 #  但是有些情况，我们需要关闭重试，可以全局关闭，也可以指定服务关闭
 #  http://localhost:1118/client1/hello3?ids=2&token=yyl 可以重试
   retryable: true
@@ -54,6 +53,12 @@ zuul:
 
 #  不自动创建路由规则，这里也不会走zuul的过滤器
   ignored-services: client2
+#  在使用spring security或者shiro，登陆完成后会发生地址重定向问题，这样就会内部具体服务的地址
+#  添加这个属性，就可以避免除网关以外的地址暴露出去
+  add-host-header: true
+
+#  路由前缀
+#  prefix:
 
 
 #hystrix超时时间配置
