--- a/spring-cloud-e-zuul/pom.xml
+++ b/spring-cloud-e-zuul/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>groovy-all</artifactId>
             <version>2.4.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
